SERVER-78050 Ensure _transferMods reads from latest snapshot

(cherry picked from commit e015af264b295b9266b0ddf0197cb4da3c3fa0fd)