src/mongo/db/s/migration_chunk_cloner_source.cpp
@@ -83,6 +83,7 @@ const int kMaxObjectPerChunk{250000};
 const Hours kMaxWaitToCommitCloneForJumboChunk(6);
 
 MONGO_FAIL_POINT_DEFINE(failTooMuchMemoryUsed);
+MONGO_FAIL_POINT_DEFINE(hangAfterProcessingDeferredXferMods);
 
 /**
  * Returns true if the given BSON object in the shard key value pair format is within the given
@@ -890,6 +891,12 @@ void MigrationChunkClonerSource::_processDeferredXferMods(OperationContext* opCt
             CollectionMetadata::extractDocumentKey(&_shardKeyPattern, newerVersionDoc);
         static_cast<void>(_processUpdateForXferMod(preImageDocKey, postImageDocKey));
     }
+
+    hangAfterProcessingDeferredXferMods.execute([&](const auto& data) {
+        if (!deferredReloadOrDeletePreImageDocKeys.empty()) {
+            hangAfterProcessingDeferredXferMods.pauseWhileSet();
+        }
+    });
 }
 
 Status MigrationChunkClonerSource::nextModsBatch(OperationContext* opCtx, BSONObjBuilder* builder) {
@@ -914,6 +921,11 @@ Status MigrationChunkClonerSource::nextModsBatch(OperationContext* opCtx, BSONOb
         deleteList.splice(deleteList.cbegin(), _deleted);
         updateList.splice(updateList.cbegin(), _reload);
     }
+
+    // It's important to abandon any open snapshots before processing updates so that we are sure
+    // that our snapshot is at least as new as those updates. It's possible for a stale snapshot to
+    // still be open from reads performed by _processDeferredXferMods(), above.
+    opCtx->recoveryUnit()->abandonSnapshot();
 
     BSONArrayBuilder arrDel(builder->subarrayStart("deleted"));
     auto noopFn = [](BSONObj idDoc, BSONObj* fullDoc) {
